--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   permission_handler: ^11.3.1
   fluttertoast: ^8.2.5
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
