--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   permission_handler: ^11.3.1
   fluttertoast: ^8.2.5
   geolocator: ^11.0.0
+  sqflite: ^2.3.3
+  path_provider: ^2.1.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
