--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.3.3
   path_provider: ^2.1.3
   shared_preferences: ^2.2.3
+  flutter_blue: ^0.8.0
 
 dev_dependencies:
   flutter_test:
