--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   sqflite: ^2.3.3
   path_provider: ^2.1.3
   shared_preferences: ^2.2.3
-  flutter_blue: ^0.8.0
+  flutter_bluetooth_serial: ^0.4.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
