--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_bluetooth_serial: ^0.4.0
   get: ^4.6.6
+  glossy: ^0.0.4
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
